hphp/test/zend/good/Zend/tests/errmsg_004.php.expectf

Fatal error: Invalid lvalue in %s/errmsg_004.php on line 7
